--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_principal.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_principal.html.twig
@@ -87,6 +87,20 @@
             <li class="footer"><a href="{{ path('dayscript_notificaciones') }}">Ver Todos los eventos</a></li>
           </ul>
         </li>
+          <!-- Tasks: style can be found in dropdown.less -->
+        <li class="dropdown tasks-menu">
+          <a href="{{ path('admin_academico_cargar_eventos_user') }}" >
+            <i class="fa fa-calendar"></i>
+            <!-- <span class="label label-danger">9</span> -->
+          </a>
+          <ul class="dropdown-menu">
+           <!-- <li class="header">Tienes 10 Eventos</li> -->
+            <li>
+              
+            </li>
+            <!-- <li class="footer"><a href="{#{ path('dayscript_notificaciones') }#}">Ver Todos los eventos</a></li> -->
+          </ul>
+        </li>
 
         
         <!-- User Account: style can be found in dropdown.less -->
