--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/calendario_carrera.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/calendario_carrera.html.twig
@@ -3,6 +3,11 @@
     <link type="text/css" rel="stylesheet" href="{{ asset('css/styles/animate.css') }}">
     <link type="text/css" rel="stylesheet" href="{{ asset('css/styles/all.css') }}">
     <link type="text/css" rel="stylesheet" href="{{ asset('css/flavr/flavr.css') }}">
+    <!-- daterange picker -->
+    <link type="text/css" rel="stylesheet" href="{{ asset('theme/plugins/daterangepicker/daterangepicker-bs3.css') }}">  
+    <link type="text/css" rel="stylesheet" href="{{ asset('theme/plugins/colorpicker/bootstrap-colorpicker.min.css') }}">  
+    <link type="text/css" rel="stylesheet" href="{{ asset('theme/plugins/timepicker/bootstrap-timepicker.min.css') }}">  
+    <link type="text/css" rel="stylesheet" href="{{ asset('theme/plugins/select2/select2.min.css') }}">  
 <style>
   #trash{
     width:32px;
@@ -27,10 +32,11 @@
                 </div>
                 <div class="box-body">
                   <!-- the events -->
+
                   <div id="external-events">
-                       {#{dump(data)}#}
-                      {%for count ,event in data %}
-                          {% set color = event.descripcion|split("|") %}
+
+                      {%for event in data.registro %}
+                          {% set color = event.nombre|split("|") %}
                            {#{dump(color)}#}
                           {% if color|length == 1%}
                                 {% set colorevent = 'rgb(0, 166, 90)' %}
@@ -39,7 +45,6 @@
                           {% endif %}
                             <div ondblclick="inactivar_evento(this)" id="{{color[0]}}" name="{{event.id_parametro}}"  class="external-event" style="background-color: {{colorevent}}">{{color[0]}}</div>
                       {% endfor %}
-
                       <!-- </div> -->
                     <!-- <div class="external-event bg-green">Lunch</div> event.css({"background-color": currColor, "border-color": currColor, "color": "#fff"}).addClass("external-event");
                     <div class="external-event bg-yellow">Go home</div>
@@ -106,6 +111,248 @@
 
     <script src="{{ asset('js/flavr/flavr.js') }}"></script>
     <script src="{{ asset('js/flavr/flavr.min.js') }}"></script>
+
+
+
+
+    <script type="text/javascript">
+      jQuery(document).ready(function() {
+
+        
+          $('#reservationtime').daterangepicker({timePicker: true, timePickerIncrement: 30, format: 'MM/DD/YYYY h:mm A'});
+          function drop(ev) {
+              ev.preventDefault();
+              var data = ev.dataTransfer.getData("text");
+              ev.target.appendChild(document.getElementById(data));
+              alert("hola mundo");
+          }
+
+          function allowDrop(ev) {
+              alert('inserte');
+              ev.preventDefault();
+          }
+
+          // function drag(ev) {
+          //     ev.dataTransfer.setData("text", ev.target.id);
+          // }
+        // function ini_events(ele,url) {
+       //          ele.each(function (url) {
+       //            // create an Event Object (http://arshaw.com/fullcalendar/docs/event_data/Event_Object/)
+       //            // it doesn't need to have a start or end
+       //            var eventObject = {
+       //              title: $.trim($(this).text()), // use the element's text as the event title
+       //              url: url
+       //            };
+
+       //            // store the Event Object in the DOM element so we can get to it later
+       //            $(this).data('eventObject', eventObject);
+
+       //            // make the event draggable using jQuery UI
+       //            $(this).draggable({
+       //              zIndex: 1070,
+       //              revert: true, // will cause the event to go back to its
+       //              revertDuration: 0  //  original position after the drag
+       //            });
+
+       //          });
+       //        }
+
+       //        ini_events($('#external-events div.external-event'));
+       //
+            var currentMousePos = {
+            x: -1,
+            y: -1
+        };
+          jQuery(document).on("mousemove", function (event) {
+              currentMousePos.x = event.pageX;
+              currentMousePos.y = event.pageY;
+          });
+
+          /* initialize the external events
+          -----------------------------------------------------------------*/
+
+          $('#external-events div.external-event').each(function() {
+
+            // store data so the calendar knows to render an event upon drop
+            // $(this).data('event', {
+            //   title: $.trim($(this).text()), // use the element's text as the event title
+            //   stick: true // maintain when user navigates (see docs on the renderEvent method)
+            // });
+
+            // make the event draggable using jQuery UI
+            $(this).draggable({
+              zIndex: 999,
+              revert: true,      // will cause the event to go back to its
+              revertDuration: 0  //  original position after the drag
+            });
+
+          });
+
+        $('#calendar').fullCalendar({
+          utc: true,
+          header: {
+                  left: 'prev,next today',
+                  center: 'title',
+                  right: 'month,agendaWeek,agendaDay'
+          },
+          buttonText: {
+                  today: 'today',
+                  month: 'month',
+                  week: 'week',
+                  day: 'day'
+          },
+          editable: true,
+          droppable: true,
+          slotDuration: '00:30:00',
+           events: function (start, end, timezone, callback) {
+                  $.ajax({
+                    url: '{{path('admin_academico_cargar_eventos')}}',
+                    type: 'POST',
+                    dataType: 'json',
+                    data: {param1: 'value1'},
+                  })
+                  .done(function(data) {
+                  var events = [];
+                    console.debug(data.length);
+                    for(i=0;i<data.length;i++){
+                      // alert(data[i]['fecha_hasta']);
+                      var nombre = data[i]['nombre_evento'];
+                      var arnombre = nombre.split("|");
+
+                      // this.id = data[i]['id_sa_eventos_calendario_academico'];
+                      // this.start = data[i]['fecha_desde'];
+                      // this.title = arnombre[0];
+                      // this.end = data[i]['fecha_hasta'];
+                      // this.color = arnombre[1];
+                      // events.push(this);
+                      events.push({
+                        id:  data[i]['id_sa_eventos_calendario_academico'],
+                        idc: data[i]['id_sa_calendario_academico'],
+                        title: arnombre[0],
+                        start: data[i]['fecha_desde'],//new Date('2015-10-12'),
+                        end:  data[i]['fecha_hasta'],//new Date('2015-10-13')
+                        color: arnombre[1]
+                      });
+                    }
+
+                      // $('#calendar').fullCalendar('addEventSource',events);
+                    callback(events);
+
+                  })
+                  .fail(function() {
+                    console.log("error");
+                  })
+                  .always(function() {
+                    console.log("complete");
+                  });
+          },
+          eventClick: function (calEvent, jsEvent, view){
+              var html =                '   <div class="form-row">' +
+                '       <input id="titulo" type="text" name="titulo" ' +
+                '       placeholder="Título" />' +
+                '   </div>' +
+                '   <div class="form-group">' +
+                '       <label>Date and time range:</label>' +
+                '       <div class="input-group">' +
+                '       <div class="input-group-addon">' +
+                '       <i class="fa fa-clock-o"></i>' +
+                '   </div>' +
+                '   <input type="text" class="form-control pull-right" id="reservationtime">' +
+                '   </div>' +
+                '   </div>' +
+                '   <div class="form-row">' +
+                '   </div>';
+
+
+                var select = $(this).parent().siblings('.demo-select');
+                var entrance = select.find('.animate-entrance :selected').text();
+                var closing = select.find('.animate-closing :selected').text();
+
+                new $.flavr({
+                    title       : 'Editar Evento',
+                    content     : '',
+                    dialog      : 'form',
+                    form        : { content: html, method: 'post' },
+                    onSubmit    : function( $container, $form ){
+                        $.post('{#{path('admin_academico_editar_eventos')}#}', {evento: $("#titulo").val(), id_evento: $(evet).attr("name"), est_evento: $("#estado").val()}, function(data) {
+                          if(data == 1){
+                              mensaje_cisc( "notice", "PROCESO EXITOSO!!");
+                            }else{
+                                mensaje_cisc( "error", "En estos momentos tenemos problemas con los servidores, lamentamos los inconvenientes");
+                            }
+                        });
+                        return false;
+                    }
+                });
+          $('#reservationtime').daterangepicker({timePicker: true, timePickerIncrement: 30, format: 'MM/DD/YYYY h:mm A'});
+          },
+          drop: function(date, allDay){
+
+              var start = date.format("YYYY-MM-DD");
+              var id_evento = $(this).attr("name");
+              // alert(id_evento);
+              insertar_eventos(start,id_evento);
+
+                // $('#calendar').fullCalendar('updateEvent',this);
+
+          },
+         eventDrop: function(event, delta, revertFunc) {
+          console.debug("delta//"+delta);
+          console.debug("event//"+event.end);
+
+          var id_evento = event.id;
+          var id_calendario = event.idc;
+        // var end = event.end.format();
+        var start = event.start.format("YYYY-MM-DD");
+        // alert(end);
+          modificar_eventos_calendario(start,id_evento,id_calendario);
+
+          },
+
+        });
+       /* ADDING EVENTS */
+              var currColor = "#3c8dbc"; //Red by default
+              //Color chooser button
+              var colorChooser = $("#color-chooser-btn");
+              $("#color-chooser > li > a").click(function (e) {
+                e.preventDefault();
+                //Save color
+                currColor = $(this).css("color");
+
+                //Add color effect to button
+                $('#add-new-event').css({"background-color": currColor, "border-color": currColor});
+              });
+
+              $("#add-new-event").click(function (e) {
+                e.preventDefault();
+                //Get value and make sure it is not null
+
+                var val = $("#new-event").val();
+                if (val.length == 0) {
+                  return;
+                }
+
+                //Create events
+                var event = $("<div />");
+                event.css({"background-color": currColor, "border-color": currColor, "color": "#fff"}).addClass("external-event ui-draggable");
+                event.html(val);
+
+                var evento_color = val+"|"+currColor;
+
+                $('#external-events').prepend(event);
+
+            crear_evento(evento_color);
+
+
+                //Add draggable funtionality
+                // ini_events(event,'www.google.com');
+
+                //Remove event from text input
+                $("#new-event").val("");
+              });
+      });
+
+    </script>
     <script type="text/javascript">
         function insertar_eventos(date,id_evento){
           // alert(date);
@@ -113,6 +360,7 @@
             $.post('{{path('admin_academico_insertar_eventos')}}', {start: date, end: date, id_evento: id_evento}, function(data) {
               if(data == 1){
                 mensaje_cisc( "notice", "EVENTO INSERTADO CON ÉXITO");
+                $('#calendar').fullCalendar( 'refetchEvents' );
               }else{
                   mensaje_cisc( "error", "En estos momentos tenemos problemas con los servidores, lamentamos los inconvenientes");
               }
@@ -156,27 +404,31 @@
                     dialog      : 'form',
                     form        : { content: html, method: 'post' },
                     onSubmit    : function( $container, $form ){
-                        $.post('', {param1: 'value1'}, function(data, textStatus, xhr) {
-                          /*optional stuff to do after success */
+                        $.post('{{path('admin_academico_editar_eventos')}}', {evento: $("#titulo").val(), id_evento: $(evet).attr("name"), est_evento: $("#estado").val()}, function(data) {
+                          if(data == 1){
+                              mensaje_cisc( "notice", "PROCESO EXITOSO!!");
+                            }else{
+                                mensaje_cisc( "error", "En estos momentos tenemos problemas con los servidores, lamentamos los inconvenientes");
+                            }
                         });
-                         // $.ajax({
-                         //    url: '',
-                         //    data: 'type=changetitle&title='+title+'&eventid='+event.id,
-                         //    type: 'POST',
-                         //    dataType: 'json',
-                         //    success: function(response){
-                         //      if(response.status == 'success')
-                         //              $('#calendar').fullCalendar('updateEvent',event);
-                         //    },
-                         //    error: function(e){
-                         //      alert('Error processing your request: '+e.responseText);
-                         //    }
-                         //  });
                         return false;
                     }
                 });
-$("#titulo").val($(evet).attr("id"));
+            $("#titulo").val($(evet).attr("id"));
+        }//end function
+
+        function modificar_eventos_calendario(date,id_evento,id_calendario){
+            // date = new Date(date);
+            $.post('{{path('admin_academico_modificar_eventos')}}', {start: date, end: date, id_evento: id_evento,id_calendario:id_calendario}, function(data) {
+              if(data == 1){
+                mensaje_cisc( "notice", "EVENTO ACTUALIZADO CON ÉXITO");
+                $('#calendar').fullCalendar( 'refetchEvents' );
+              }else{
+                  mensaje_cisc( "error", "En estos momentos tenemos problemas con los servidores, lamentamos los inconvenientes");
+              }
+            });
         }
+
     </script>
-    
+
 {% endblock %}
