--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_lateral.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_lateral.html.twig
@@ -40,6 +40,7 @@
         <ul class="treeview-menu">
           <li><a href="{{path('admin_academico_home')}}"><i class="fa fa-circle-o"></i> Calendario por Carrera </a></li>
           <li><a href="{{path('admin_carreras_ordenpago')}}"><i class="fa fa-circle-o"></i> Orden de Pago </a></li>
+          <li><a href="{{path('admin_inscripcion')}}"><i class="fa fa-circle-o"></i> Inscripcion </a></li>
 
         </ul>
       </li>
