--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_lateral.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_lateral.html.twig
@@ -41,6 +41,7 @@
           <li><a href="{{path('admin_academico_home')}}"><i class="fa fa-circle-o"></i> Calendario por Carrera </a></li>
           <li><a href="{{path('admin_carreras_ordenpago')}}"><i class="fa fa-circle-o"></i> Orden de Pago </a></li>
           <li><a href="{{path('admin_inscripcion')}}"><i class="fa fa-circle-o"></i> Inscripcion </a></li>
+          <li><a href="{{path('admin_anulacion')}}"><i class="fa fa-circle-o"></i> Anulaciones </a></li>
 
         </ul>
       </li>
