--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/notasAlumnosMateria.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/notasAlumnosMateria.html.twig
@@ -7,12 +7,13 @@
     {%for count, parcial in arr_parcial %}
     <li><a data-toggle="tab" class="tabNotas"  id="ingreso{{count}}">{{parcial.parcial}}</a></li>
     {% endfor %}
+    <li><a data-toggle="tab" class="tabNotas"  id="ingreso2">Listar Alumnos</a></li>
   </ul>
 
   <!-- Tab panes -->
-  <div class="tab-content" id="panelNotasCarrera_{{idCarrera}}">
-    <div class="tab-pane fade in active" id="content-notas"></div>
-  </div>
+  {# <div class="tab-pane fade in active" id="content-notas"></div>#}
+  <div class="tab-pane fade in active" id="panelNotasCarrera_{{idCarrera}}">
+</div>
 </div>
 
 <script type="text/javascript">
@@ -22,10 +23,10 @@
 
          var obj_data = {"idMateria" : "{{idMateria}}", "idCarrera" : "{{idCarrera}}"};
 
-         mostrarInfoTabsNotas('notas','{{ path('docentes_consulta_notas_materia') }}', obj_data);
+         mostrarInfoTabsNotas('panelNotasCarrera_{{idCarrera}}','{{ path('docentes_consulta_notas_materia') }}', obj_data);
       }
       if (condition == 'ingresonotas'){
-         mostrarAlumnos('ingresonotas','{{ path('docentes_mostrar_alumnos') }}','2345');
+         tabdocentes('panelNotasCarrera_{{idCarrera}}','{{ path('docentes_mostrar_alumnos') }}','2345');
       }
      {#mostrarAlumnos('alumnos3','{ path('docentes_mostrarAlumnoexamen') }','2345');#}
    });
@@ -39,19 +40,20 @@
 
        var obj_data = {"idMateria" : "{{idMateria}}", "idCarrera" : "{{idCarrera}}"};
 
-       mostrarInfoTabsNotas('notas','{{ path('docentes_consulta_notas_materia') }}', obj_data);
+       mostrarInfoTabsNotas('panelNotasCarrera_{{idCarrera}}','{{ path('docentes_consulta_notas_materia') }}', obj_data);
      }
      if(tabs ==='ingreso1'){
         var materia= '{{idMateria}}';
        // alert(materia);
-       mostrarAlumnos('notas','{{ path('docentes_mostrar_alumnos') }}',materia);
+       tabdocentes('panelNotasCarrera_{{idCarrera}}','{{ path('docentes_mostrar_alumnos') }}',materia);
      }
      else if(tabs==='ingreso2'){
-       mostrarAlumnos('notas','{{ path('docentes_mostrar_alumnos2') }}','2');
+       
+       tabdocentes('panelNotasCarrera_{{idCarrera}}','{{ path('admin_lista_estudiantes') }}','{{idCarrera}}');
      }
      else if(tabs==='ingreso3'){
        
-       mostrarAlumnos('notas','{{ path('docentes_mostrarAlumnoexamen') }}','2345');
+       tabdocentes('panelNotasCarrera_{{idCarrera}}','{{ path('docentes_mostrarAlumnoexamen') }}','2345');
      }
    });
    
@@ -63,13 +65,13 @@
          data: obj_data,
          dataType: "html",
          beforeSend: function() { 
-            $( "#content-"+idContenedor ).html("Cargando, espere por favor...");
-            $( "#content-"+idContenedor ).html( "<div id='loading-bar-spinner-relative'><div class='spinner-icon'></div></div>" );
+            $( "#"+idContenedor ).html("Cargando, espere por favor...");
+            $( "#"+idContenedor ).html( "<div id='loading-bar-spinner-relative'><div class='spinner-icon'></div></div>" );
          },
          error: function(){
             //console.log("hay un error");
             var mensajeErrorNotas   = "Lo sentimos. Se  presentó un error para cargar la consulta de las Notas."
-            $( "#content-"+idContenedor ).html(mensajeErrorNotas);
+            $( "#"+idContenedor ).html(mensajeErrorNotas);
          },
          success: function(data) {
             {#if(data.error === true){
@@ -81,7 +83,7 @@
                $( "#content-"+id ).html(data.html);
             }#}
             $("#menu-toggle").click();
-            $( "#content-"+idContenedor ).html(data);
+            $( "#"+idContenedor ).html(data);
          }
       });
    }
