--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/cambio_password_interno.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/cambio_password_interno.html.twig
@@ -1,6 +1,6 @@
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<link type="text/css" rel="stylesheet" href="{{ asset('https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css') }}">
+{% extends 'TitulacionSisAcademicoBundle:Home:index.html.twig' %}
+{% block home %}  
+
 <link type="text/css" rel="stylesheet" href="{{ asset('css/styles/animate.css') }}">
 <link type="text/css" rel="stylesheet" href="{{ asset('css/styles/all.css') }}">
 <link type="text/css" rel="stylesheet" href="{{ asset('css/flavr/flavr.css') }}">
@@ -149,7 +149,7 @@ function login(stringvalue){
           html = htmlCabecera + html; 
 
     new $.flavr({
-        title       : 'Restablecer Contraseña',
+        title       : 'Cambio Contraseña',
         iconPath    : '{{ asset('images/menu/')}}',
         icon        : 'ug_logo.png',
         dialog      : 'form',
@@ -232,10 +232,10 @@ function login(stringvalue){
         
         },
         danger: { text: 'Salir',id:'salir', style: 'danger', action: function(){ this.animate('fadeOutDown'); location.href = '{{path('titulacion_sis_academico_ingresar')}}'; return false }}
-
     }
     });
     }
 }
 
 </script>
+{% endblock %}
