--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/base.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/base.html.twig
@@ -26,9 +26,6 @@
 
   </head>
 
-
-
-
   <body class="hold-transition skin-blue-light sidebar-collapse sidebar-mini">
     <!-- Site wrapper -->
     <div class="wrapper">
@@ -84,9 +81,10 @@
     <script src="{{ asset('https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.2/moment.min.js') }}"></script>
     <script src="{{ asset('theme/plugins/fullcalendar/fullcalendar.min.js') }}"></script>
 
-   <script src="{{ asset('theme/plugins/datatables/jquery.dataTables.min.js') }}"></script>
-   <script src="{{ asset('theme/plugins/datatables/dataTables.bootstrap.min.js') }}"></script>
-   <script src="{{ asset('js/growl/jquery.growl.js') }}"></script>
+    <script src="{{ asset('theme/plugins/datatables/jquery.dataTables.min.js') }}"></script>
+    <script src="{{ asset('theme/plugins/datatables/dataTables.bootstrap.min.js') }}"></script>
+    <script src="{{ asset('js/growl/jquery.growl.js') }}"></script>
+    <script src="{{ asset('theme/plugins/chartjs/Chart.min.js') }}"></script>
 
 
 <script type="text/javascript">
