--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_principal.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_principal.html.twig
@@ -1,3 +1,7 @@
+<style type="text/css">
+  .dropdown-menu { border: 1px solid #3C8DBC !important; }
+</style>
+
 <header class="main-header">
   <!-- Logo -->
   <a href="#" class="logo">
@@ -14,9 +18,6 @@
     </a>
     <div class="navbar-custom-menu">
       <ul class="nav navbar-nav">
-
-
-       
         <!-- Messages: style can be found in dropdown.less-->
         <li class="dropdown messages-menu">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -100,18 +101,18 @@
             <!-- User image -->
             <li class="user-header">
               <img src="{{ asset('theme/dist/img/user2-160x160.jpg')}}" class="img-circle" alt="User Image">
-              <p>
-                {{app.session.get('nom_usuario')}} - Developer
-                <small>En actividad desde Sept. 2015</small>
+              <p>{{app.session.get('nom_usuario')}}
+              <small>{{app.session.get('cedula')}}</small>
+                {% if app.session.get('descRol') is not empty %}-   {{app.session.get('descRol')}}   -{% endif %}
               </p>
             </li>
             <!-- Menu Footer-->
             <li class="user-footer">
               <div class="pull-left">
-                
+                {# <a href="{{path('admin_academico_cambio_pass')}}" class="btn btn-default btn-flat">Cambio Contraseña</a> #}
               </div>
               <div class="pull-right">
-                <a href="{{path('titulacion_sis_academico_logout')}}" class="btn btn-default btn-flat">Sign out</a>
+                <a href="{{path('titulacion_sis_academico_logout')}}" class="btn btn-default btn-flat">Salir</a>
               </div>
             </li>
           </ul>
